--- a/css/main.css
+++ b/css/main.css
@@ -97,8 +97,9 @@ textarea {
 
 
 html {
-  background-color: #fff;
+  background-color: tan;
   height: 100%;
+  width: 100%;
 }
 
 body {
@@ -110,22 +111,26 @@ body {
 
 .wrapper {
   /*add display:flex and set justify-content to space-between*/
-  font-weight: 700;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  font-weight: 700;
 }
 
 .div-1, .div-2, .div-3 {
   /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
-  color: #fff;
+  color: rgb(94, 74, 19);
   line-height: 1.5em;
-  font-size: 1.6em;
-  background-color: #f16059;
+  font-size: 1em;
   height: 300px;
   display: flex;
-  width: 30%;
+  /*width: 30%;*/
   justify-content: center;
   align-items: center;
+  font-family: 'Quicksand';
+  border-right: 1px solid grey;
+  height: auto;
+  padding: 20px;
 }
 
 
